 ============

 Released on 
  
 New features and improvements:

   - Error messages are full sentences (todo #1244).
   - Homogeneize Importers version numbers (todo #1240).
   - Plugin manager now displays the implemented DB models (todo #1241).
   - Have transactions when generating entries (todo #89).

 Bug fixes:

   - ofaITVColumnable: defines a dedicated scope (todo #1221, #1234).

 Other changes:

   - ofaIThemeManager: renamed to ofaIPageManager (todo #1242).
   - ofaPaimeanFrameBin: is not an ofaIActioner.
   - ofaPeriodicity: remove obsoleted functions.

-----------------------------------------------------------------------
 Version 0.61
 ============

 Released on 2016-10-23
  
 New features and improvements:

   - Core DB model v33
   - Recurrent DB model v6, v7
   - ofaAccountProperties: let the user sort the archived soldes (todo #1163).
   - ofaCheckBalances, ofaCheckIntegrity: make the [Close] button the default.
   - ofaClosingParmsBin: check that operation templates are able to generate valid entries (todo #1230).
   - ofaExerciceCloseAssistant: only close the RAN ledger, do not archive accounts balances.
   - ofaGuidedInput: let the account be changed on mean of paiement selection (todo #714).
   - ofaLedgerClose: display ledgers in alphabetical order.
   - ofaLedgerProperties: display ledger balances (todo #1227).
   - ofaPeriodClose: have a progress bar when archiving accounts (todo #1160).
   - ofaReconcilPage: do not check for balanced amounts on Ctrl+Reconciliate.
   - ofaRecurrentModel: display grayed+italic disabled models.
   - ofaRecurrentRun: user confirm validation and display a progress bar (todo #1166).
   - ofaRestoreAssistant: change the 'New' button mnemonic to distinguish it from 'Next' (todo #1233). 
   - ofaTVARecordProperties: distinguish between error and warning messages (todo #1168).
   - ofoLedger: archive ledger balances (todo #1162).

 Bug fixes:
