@@ -357,8 +357,6 @@
 1243 2016-10-22 have a command-line tool which displays the version of
                 each of the DBModels of a saved database
 
-1245 2016-11- 7 Means of paiement page: double click should open properties
-
 1246
 
 -----------------------------------------------------------------------
@@ -1889,6 +1887,9 @@
 
 1244 2016-10-23 error messages should be full sentences (with a verb)
      2016-10-23 done
+
+1245 2016-11- 7 Means of paiement page: double click should open properties
+     2016-11- 9 fixed
 
 -----------------------------------------------------------------------
  P. Wieser - Created on 2014, may 2nd
